Closed
Bug 1511468
Opened 6 years ago
Closed 6 years ago
Perma late beta dist/include/mozilla/dom/ContentChild.h:723:16: error: 'OnChannelReceivedMessage' marked 'override' but does not override any member functions when Gecko 65 becomes late beta around 2019-01-03
Categories
(Core :: Storage: localStorage & sessionStorage, defect)
Core
Storage: localStorage & sessionStorage
Tracking
()
VERIFIED
FIXED
mozilla65
Tracking | Status | |
---|---|---|
firefox-esr60 | --- | unaffected |
firefox63 | --- | unaffected |
firefox64 | --- | unaffected |
firefox65 | blocking | verified |
People
(Reporter: aryx, Assigned: janv)
References
Details
Attachments
(1 file)
2.11 KB,
patch
|
froydnj
:
review+
|
Details | Diff | Splinter Review |
Late beta simulation with bustage: https://treeherder.mozilla.org/#/jobs?repo=try&resultStatus=testfailed%2Cbusted%2Cexception%2Cretry%2Cusercancel%2Crunnable&selectedJob=214933734&revision=706362284f8d0bf3a864be250c6aa887d67ae285
Failure log: https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=214933734&repo=try&lineNumber=13649
[task 2018-11-30T20:12:27.854Z] 20:12:27 INFO - virtual void OnChannelReceivedMessage(const Message& aMsg) override;
[task 2018-11-30T20:12:27.855Z] 20:12:27 INFO - ^
[task 2018-11-30T20:12:27.855Z] 20:12:27 INFO - 1 error generated.
[task 2018-11-30T20:12:27.855Z] 20:12:27 INFO - /builds/worker/workspace/build/src/config/rules.mk:1131: recipe for target 'SandboxBrokerPolicyFactory.o' failed
[task 2018-11-30T20:12:27.856Z] 20:12:27 ERROR - make[4]: *** [SandboxBrokerPolicyFactory.o] Error 1
Bug 1286798 touched this.
Flags: needinfo?(jvarga)
Assignee | ||
Comment 1•6 years ago
|
||
I think we need to undo patch part 3 from bug 1451363.
Flags: needinfo?(jvarga)
Assignee | ||
Comment 2•6 years ago
|
||
Nathan, we need this method for new localStorage implementation, at least while CPOWs exist.
See these comments:
https://searchfox.org/mozilla-central/rev/8f0db72fb6e35414fb9a6fc88af19c69f332425f/dom/localstorage/PBackgroundLSRequest.ipdl#54
https://searchfox.org/mozilla-central/rev/8f0db72fb6e35414fb9a6fc88af19c69f332425f/dom/localstorage/LSObject.h#107
The cancel method is called here:
https://searchfox.org/mozilla-central/rev/8f0db72fb6e35414fb9a6fc88af19c69f332425f/dom/ipc/ContentChild.cpp#3819
It's unfortunate, but we need it.
Comment 3•6 years ago
|
||
Comment on attachment 9029038 [details] [diff] [review]
patch
Review of attachment 9029038 [details] [diff] [review]:
-----------------------------------------------------------------
Just to make sure I understand, we can't #ifdef out the ContentChild::OnChannelReceivedMessage because we now need that hook for the sole benefit of Local Storage?
Assuming that's correct, r=me, I guess.
Attachment #9029038 -
Flags: review?(nfroyd) → review+
Assignee | ||
Comment 4•6 years ago
|
||
(In reply to Nathan Froyd [:froydnj] from comment #3)
> Comment on attachment 9029038 [details] [diff] [review]
> patch
>
> Review of attachment 9029038 [details] [diff] [review]:
> -----------------------------------------------------------------
>
> Just to make sure I understand, we can't #ifdef out the
> ContentChild::OnChannelReceivedMessage because we now need that hook for the
> sole benefit of Local Storage?
>
> Assuming that's correct, r=me, I guess.
Yes, that's right. Thanks for quick r+
Pushed by jvarga@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/5502cb331414
make OnChannelReceivedMessage unconditionally defined; r=froydnj
Comment 6•6 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
Reporter | ||
Comment 7•6 years ago
|
||
Verified fixed with today's late beta: https://treeherder.mozilla.org/#/jobs?repo=try&resultStatus=testfailed%2Cbusted%2Cexception%2Cretry%2Cusercancel%2Crunnable&classifiedState=unclassified&revision=802a8f9692bbff33a8c217b11a7afbf0fdb59379
Status: RESOLVED → VERIFIED
Updated•6 years ago
|
Severity: normal → major
You need to log in
before you can comment on or make changes to this bug.
Description
•