Bug 1511468 - make OnChannelReceivedMessage unconditionally defined; r=froydnj